2015-11-02  SilverNexus
	* search.c: Implemented support for specific path search exclusions.
	* settings.h: Added a variable to store the length of the base search path.
	* settings.c: Initialize the search path length to zero.
	* parseArgs.c: Add support for parsing -X flag.
	* main.c: Ensure the base path length is reset between different search root traversals.

2015-10-27  SilverNexus
	* configure.ac: Made a configure flag to enable debugging.
	* Makefile.am: Set up flags for debug and nondebug modes.
	* search.c: Fix a crash that would occur if directories were excluded.

2015-06-08  SilverNexus
	* search.c: Loop optimization in the file search section.

2015-06-03  SilverNexus
	* search.c: Refactor check for failure to load output file to occur
	  only if the file was just loaded.
	* configure.ac: Bump version to 0.02-dev.
	* Makefile.am: Add new file result_list.c.
	* main.c: Implement delayed recording of results.
	* search.c: Defer recording of results to after the directory tree is searched.
	  This solves a bug involving fileperuser writing to the results file while reading from it.
	* TODO: Removed statement about the bug mentioned above, as it is resolved.
	* result_list.c: Implemented a linked list of structures for finding search results.
	* result_list.h: Defines a linked list of structures for finding search results.

2015-06-02  SilverNexus
	* dir_list.h,
	  dir_list.c: Removed unused function free_dir_node().

2015-06-01  SilverNexus
	* search.c: Refactored search algorithm to use strstr and strcasestr.
	  In the process, also made multiple instances of the search string
	  discoverable by the search.
	* search.h: Removed obsolete function for searching.
	* parseArgs.c: Removed obsolete setting for length of search string.
	  Adjusting --no-case flag to set strstr or strcasestr.
	* settings.c: Changed default comparison function to strstr.
	  Removed initialization of search sting length settings value.